psm(4): Probe Synaptics touchpad with active multiplexing mode enabled

if it is only multiplexed device. Also enable syncbit checks for them.
This fixes touchpad recognition on Panasonic Toughbook CF-MX4 laptop.

Reported by:	Tomasz "CeDeROM" CEDRO <tomek_AT_cedro_DOT_info>
PR:		253279
Differential revision:	https://reviews.freebsd.org/D28502

(cherry picked from commit f5998d20ed80fdc1cb3ba0c245cae5f179e22fe2)